Added Schematic Block.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -411,6 +411,8 @@
 	"block.evolution.sapling_redwood": "Redwood Sapling",
 	"block.evolution.sapling_spruce": "Spruce Sapling",
 	"block.evolution.sapling_willow": "Willow Sapling",	
+	
+	"block.evolution.schematic_block": "Schematic Block",
 
 	"block.evolution.shadow_hound": "Shadow Hound Block",
 	
