--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -411,6 +411,8 @@
 	"block.evolution.sapling_redwood": "Muda de Sequoia",
 	"block.evolution.sapling_spruce": "Muda de Pinheiro",
 	"block.evolution.sapling_willow": "Muda de Salgueiro",	
+	
+	"block.evolution.schematic_block": "Bloco de Esquema",
 
 	"block.evolution.shadow_hound": "Bloco de Cachorro das Sombras",
 	
