Added Translation Keys for Plank Item.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -646,6 +646,25 @@
 	
 	"item.evolution.placeholder_item": "Placeholder Item",
 	
+	"item.evolution.plank_acacia": "Acacia Plank",
+	"item.evolution.plank_aspen": "Aspen Plank",
+	"item.evolution.plank_birch": "Birch Plank",
+	"item.evolution.plank_cedar": "Cedar Plank",
+	"item.evolution.plank_ebony": "Ebony Plank",
+	"item.evolution.plank_elm": "Elm Plank",
+	"item.evolution.plank_eucalyptus": "Eucalyptus Plank",
+	"item.evolution.plank_fir": "Fir Plank",
+	"item.evolution.plank_kapok": "Kapok Plank",
+	"item.evolution.plank_mangrove": "Mangrove Plank",
+	"item.evolution.plank_maple": "Maple Plank",
+	"item.evolution.plank_oak": "Oak Plank",
+	"item.evolution.plank_old_oak": "Old Oak Plank",
+	"item.evolution.plank_palm": "Palm Plank",
+	"item.evolution.plank_pine": "Pine Plank",
+	"item.evolution.plank_redwood": "Redwood Plank",
+	"item.evolution.plank_spruce": "Spruce Plank",
+	"item.evolution.plank_willow": "Willow Plank",
+	
 	"item.evolution.rope": "Rope",
 	
 	"item.evolution.shovel_andesite": "Andesite Shovel",
