--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -646,6 +646,25 @@
 	
 	"item.evolution.placeholder_item": "Item Placeholder",
 	
+	"item.evolution.plank_acacia": "Tábua de Acácia",
+	"item.evolution.plank_aspen": "Tábua de Choupo",
+	"item.evolution.plank_birch": "Tábua de Bétula",
+	"item.evolution.plank_cedar": "Tábua de Cedro",
+	"item.evolution.plank_ebony": "Tábua de Ébano",
+	"item.evolution.plank_elm": "Tábua de Ulmeiro",
+	"item.evolution.plank_eucalyptus": "Tábua de Eucalipto",
+	"item.evolution.plank_fir": "Tábua de Abeto",
+	"item.evolution.plank_kapok": "Tábua de Sumaúma",
+	"item.evolution.plank_mangrove": "Tábua de Árvore de Manguezal",
+	"item.evolution.plank_maple": "Tábua de Bordo",
+	"item.evolution.plank_oak": "Tábua de Carvalho",
+	"item.evolution.plank_old_oak": "Tábua de Carvalho Ancião",
+	"item.evolution.plank_palm": "Tábua de Palmeira",
+	"item.evolution.plank_pine": "Tábua de Pinus",
+	"item.evolution.plank_redwood": "Tábua de Sequoia",
+	"item.evolution.plank_spruce": "Tábua de Pinheiro",
+	"item.evolution.plank_willow": "Tábua de Salgueiro",
+	
 	"item.evolution.rope": "Corda",
 	
 	"item.evolution.shovel_andesite": "Pá de Andesito",
