--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -38,10 +38,13 @@
 	"evolution.subtitle.wood_collapse": "Wood Collapsing",
 	
 	"COMMENT": "DEATH MESSAGES",
+	"death.attack.fall_damage": "%1$s fell from a high place",
 	"death.attack.falling_rock": "%1$s was crushed by a collapsing rock",
 	"death.attack.falling_soil": "%1$s was buried by a landslide",
 	"death.attack.falling_tree": "%1$s didn't see the falling tree",
 	"death.attack.falling_wood": "%1$s was crushed by a falling piece of wood",
+	"death.attack.hook": "%1$s was hooked by %2$s",
+	"death.attack.spear": "%1$s was impaled by %2$s",
 	
 	"COMMENT": "ADVANCEMENTS",
 	"evolution.advancements.general.root.title": "Evolution Mod",
