--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -38,10 +38,13 @@
 	"evolution.subtitle.wood_collapse": "Madeira caindo",
 	
 	"COMMENT": "DEATH MESSAGES",
+	"death.attack.fall_damage": "%1$s caiu de um lugar alto",
 	"death.attack.falling_rock": "%1$s foi esmagado(a) por uma pedra desmoronando",
 	"death.attack.falling_soil": "%1$s foi soterrado(a) por um deslizamento de terra",
 	"death.attack.falling_tree": "%1$s não viu a árvore caindo",
 	"death.attack.falling_wood": "%1$s foi esmagado(a) por um pedaço de madeira caindo",
+	"death.attack.hook": "%1$s foi enganchado(a) por %2$s",
+	"death.attack.spear": "%1$s foi empalado(a) por %2$s",
 	
 	"COMMENT": "ADVANCEMENTS",
 	"evolution.advancements.general.root.title": "Mod Evolution",
