--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -7,6 +7,7 @@
   "itemGroup.evolution.misc": "Diversos",
   "itemGroup.evolution.stone_tools": "Ferramentas de Pedra",
   "itemGroup.evolution.trees_and_wood": "Árvores e Madeira",
+  "itemGroup.evolution.liquids": "Líquidos e Recipientes",
   "COMMENT_KEYS": "_____________________________________________________________________________________________________________________KEYS",
   "key.prone.toggle": "Alternar rastejar",
   "key.build_assist": "Assistente de construção",
@@ -123,6 +124,9 @@
   "evolution.calendar.connector": "de",
   "COMMENT_TOOLTIPS": "_____________________________________________________________________________________________________________TOOLTIPS",
   "evolution.tooltip.clay.mold": " Coloque enquanto agachado para moldar",
+  "evolution.tooltop.container.amount": "%2$s: %1$s L",
+  "evolution.tooltip.container.capacity": "Capacidade: %1$s L",
+  "evolution.tooltip.container.empty": "Vazio",
   "evolution.tooltip.damage.generic": "%1$s Dano de Ataque",
   "evolution.tooltip.damage.crushing": "%1$s Dano Esmagante",
   "evolution.tooltip.damage.piercing": "%1$s Dano Penetrante",
@@ -149,9 +153,11 @@
   "evolution.tooltip.torch.relit": "Pode ser reacessa numa fonte de fogo",
   "evolution.tooltip.torch.time": "Tempo restante: %1$s h",
   "evolution.tooltip.two_handed": "Duas Mãos",
+  "COMMENT_FLUIDS": "_________________________________________________________________________________________________________________FLUIDS",
+  "evolution.fluid.fresh_water": "Água Doce",
   "COMMENT_BLOCKS": "_________________________________________________________________________________________________________________BLOCKS",
-  "block.evolution.block_copper": "Block of Copper",
-  "block.evolution.clay": "Clay",
+  "block.evolution.block_copper": "Bloco de Cobre",
+  "block.evolution.clay": "Argila",
   "block.evolution.chopping_block_acacia": "Bloco de Corte de Acácia",
   "block.evolution.chopping_block_aspen": "Bloco de Corte de Choupo",
   "block.evolution.chopping_block_birch": "Bloco de Corte de Bétula",
@@ -505,6 +511,7 @@
   "item.evolution.axe_head_schist": "Cabeça de Machado de Xisto",
   "item.evolution.axe_head_shale": "Cabeça de Machado de Folhelho",
   "item.evolution.axe_head_slate": "Cabeça de Machado de Ardósia",
+  "item.evolution.bucket_ceramic_empty": "Balde de Cerâmica",
   "item.evolution.clayball": "Bola de Argila",
   "item.evolution.climbing_hook": "Gancho de Escalada",
   "item.evolution.clock": "Relógio",
