--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -7,6 +7,7 @@
   "itemGroup.evolution.misc": "Misc",
   "itemGroup.evolution.stone_tools": "Stone Tools",
   "itemGroup.evolution.trees_and_wood": "Trees and Wood",
+  "itemGroup.evolution.liquids": "Liquids and Containers",
   "COMMENT_KEYS": "_____________________________________________________________________________________________________________________KEYS",
   "key.prone.toggle": "Toggle Prone",
   "key.build_assist": "Build Assist",
@@ -123,6 +124,9 @@
   "evolution.calendar.connector": "of",
   "COMMENT_TOOLTIPS": "_____________________________________________________________________________________________________________TOOLTIPS",
   "evolution.tooltip.clay.mold": " Place while sneaking to mold",
+  "evolution.tooltop.container.amount": "%2$s: %1$s L",
+  "evolution.tooltip.container.capacity": "Capacity: %1$s L",
+  "evolution.tooltip.container.empty": "Empty",
   "evolution.tooltip.damage.generic": "%1$s Attack Damage",
   "evolution.tooltip.damage.crushing": "%1$s Crushing Damage",
   "evolution.tooltip.damage.piercing": "%1$s Piercing Damage",
@@ -149,6 +153,8 @@
   "evolution.tooltip.torch.relit": "Can be relit in a fire source",
   "evolution.tooltip.torch.time": "Time remaining: %1$s h",
   "evolution.tooltip.two_handed": "Two-Handed",
+  "COMMENT_FLUIDS": "_________________________________________________________________________________________________________________FLUIDS",
+  "evolution.fluid.fresh_water": "Fresh Water",
   "COMMENT_BLOCKS": "_________________________________________________________________________________________________________________BLOCKS",
   "block.evolution.block_copper": "Block of Copper",
   "block.evolution.clay": "Clay",
@@ -505,6 +511,7 @@
   "item.evolution.axe_head_schist": "Schist Axe Head",
   "item.evolution.axe_head_shale": "Shale Axe Head",
   "item.evolution.axe_head_slate": "Slate Axe Head",
+  "item.evolution.bucket_ceramic_empty": "Ceramic Bucket",
   "item.evolution.clayball": "Clayball",
   "item.evolution.climbing_hook": "Climbing Hook",
   "item.evolution.clock": "Clock",
