--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -8,6 +8,8 @@
   "itemGroup.evolution.stone_tools": "Stone Tools",
   "itemGroup.evolution.trees_and_wood": "Trees and Wood",
   "itemGroup.evolution.liquids": "Liquids and Containers",
+  "COMMENT_COMMANDS": "_____________________________________________________________________________________________________________COMMANDS",
+  "command.evolution.tickrate": "The game tickrate was changed to %1$s TPS",
   "COMMENT_KEYS": "_____________________________________________________________________________________________________________________KEYS",
   "key.prone.toggle": "Toggle Prone",
   "key.build_assist": "Build Assist",
