Improved the advancement screen.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -121,7 +121,176 @@
   "death.fell.killer.rope": "%1$s was pushed off a rope",
   "death.fell.killer.vines": "%1$s was pushed off some vines",
   "COMMENT_ADVANCEMENTS": "_____________________________________________________________________________________________________ADVANCEMENTS",
-  "evolution.advancements.general.root.title": "Evolution Mod",
+  "advancements.criteria.diamond_boots": "Diamond Boots",
+  "advancements.criteria.diamond_chestplate": "Diamond Chestplate",
+  "advancements.criteria.diamond_helmet": "Diamond Helmet",
+  "advancements.criteria.diamond_leggings": "Diamond Leggings",
+  "advancements.criteria.iron_boots": "Iron Boots",
+  "advancements.criteria.iron_chestplate": "Iron Chestplate",
+  "advancements.criteria.iron_helmet": "Iron Helmet",
+  "advancements.criteria.iron_leggings": "Iron Leggings",
+  "advancements.criteria.minecraft:blaze": "Blaze",
+  "advancements.criteria.minecraft:cave_spider": "Cave Spider",
+  "advancements.criteria.minecraft:creeper": "Creeper",
+  "advancements.criteria.minecraft:drowned": "Drowned",
+  "advancements.criteria.minecraft:enderman": "Enderman",
+  "advancements.criteria.minecraft:evoker": "Evoker",
+  "advancements.criteria.minecraft:ghast": "Ghast",
+  "advancements.criteria.minecraft:guardian": "Guardian",
+  "advancements.criteria.minecraft:husk": "Husk",
+  "advancements.criteria.minecraft:magma_cube": "Magma Cube",
+  "advancements.criteria.minecraft:phantom": "Phantom",
+  "advancements.criteria.minecraft:pillager": "Pillager",
+  "advancements.criteria.minecraft:ravager": "Ravager",
+  "advancements.criteria.minecraft:shulker": "Shulker",
+  "advancements.criteria.minecraft:silverfish": "Silverfish",
+  "advancements.criteria.minecraft:skeleton": "Skeleton",
+  "advancements.criteria.minecraft:slime": "Slime",
+  "advancements.criteria.minecraft:spider": "Spider",
+  "advancements.criteria.minecraft:stray": "Stray",
+  "advancements.criteria.minecraft:vindicator": "Vindicator",
+  "advancements.criteria.minecraft:witch": "Witch",
+  "advancements.criteria.minecraft:wither_skeleton": "Wither Skeleton",
+  "advancements.criteria.minecraft:zombie": "Zombie",
+  "advancements.criteria.minecraft:zombie_pigman": "Zombie Pigman",
+  "advancements.criteria.minecraft:zombie_villager": "Zombie Villager",
+  "advancements.criteria.minecraft:badlands": "Badlands",
+  "advancements.criteria.minecraft:badlands_plateau": "Badlands Plateau",
+  "advancements.criteria.minecraft:bamboo_jungle": "Bamboo Jungle",
+  "advancements.criteria.minecraft:bamboo_jungle_hills": "Bamboo Jungle Hills",
+  "advancements.criteria.minecraft:beach": "Beach",
+  "advancements.criteria.minecraft:birch_forest": "Birch Forest",
+  "advancements.criteria.minecraft:birch_forest_hills": "Birch Forest Hills",
+  "advancements.criteria.minecraft:cold_ocean": "Cold Ocean",
+  "advancements.criteria.minecraft:dark_forest": "Dark Forest",
+  "advancements.criteria.minecraft:deep_cold_ocean": "Deep Cold Ocean",
+  "advancements.criteria.minecraft:deep_frozen_ocean": "Deep Frozen Ocean",
+  "advancements.criteria.minecraft:deep_lukewarm_ocean": "Deep Lukewarm Ocean",
+  "advancements.criteria.minecraft:desert": "Desert",
+  "advancements.criteria.minecraft:desert_hills": "Desert Hills",
+  "advancements.criteria.minecraft:forest": "Forest",
+  "advancements.criteria.minecraft:frozen_river": "Frozen River",
+  "advancements.criteria.minecraft:giant_tree_taiga": "Giant Tree Taiga",
+  "advancements.criteria.minecraft:giant_tree_taiga_hills": "Giant Tree Taiga Hills",
+  "advancements.criteria.minecraft:jungle": "Jungle",
+  "advancements.criteria.minecraft:jungle_edge": "Jungle Edge",
+  "advancements.criteria.minecraft:jungle_hills": "Jungle Hills",
+  "advancements.criteria.minecraft:lukewarm_ocean": "Lukewarm Ocean",
+  "advancements.criteria.minecraft:mountains": "Mountains",
+  "advancements.criteria.minecraft:mushroom_field_shore": "Mushroom Field Shore",
+  "advancements.criteria.minecraft:mushroom_fields": "Mushroom Fields",
+  "advancements.criteria.minecraft:plains": "Plains",
+  "advancements.criteria.minecraft:river": "River",
+  "advancements.criteria.minecraft:savanna": "Savanna",
+  "advancements.criteria.minecraft:savanna_plateau": "Savanna Plateau",
+  "advancements.criteria.minecraft:snowy_beach": "Snowy Beach",
+  "advancements.criteria.minecraft:snowy_mountains": "Snowy Mountains",
+  "advancements.criteria.minecraft:snowy_taiga": "Snowy Taiga",
+  "advancements.criteria.minecraft:snowy_taiga_hills": "Snowy Taiga Hills",
+  "advancements.criteria.minecraft:snowy_tundra": "Snowy Tundra",
+  "advancements.criteria.minecraft:stone_shore": "Stone Shore",
+  "advancements.criteria.minecraft:swamp": "Swamp",
+  "advancements.criteria.minecraft:taiga": "Taiga",
+  "advancements.criteria.minecraft:taiga_hills": "Taiga Hills",
+  "advancements.criteria.minecraft:warm_ocean": "Warm Ocean",
+  "advancements.criteria.minecraft:wooded_badlands_plateau": "Wooded Badlands Plateau",
+  "advancements.criteria.minecraft:wooded_hills": "Wooded Hills",
+  "advancements.criteria.minecraft:wooded_mountains": "Wooded Mountains",
+  "advancements.criteria.killed_something": "Killed something",
+  "advancements.criteria.killed_by_something": "Killed by something",
+  "advancements.criteria.cod": "Cod",
+  "advancements.criteria.pufferfish": "Pufferfish",
+  "advancements.criteria.salmon": "Salmon",
+  "advancements.criteria.tropical_fish": "Tropical Fish",
+  "advancements.criteria.beetroots": "Beetroots",
+  "advancements.criteria.melon_stem": "Melon",
+  "advancements.criteria.nether_wart": "Nether Wart",
+  "advancements.criteria.pumpkin_stem": "Pumpkin",
+  "advancements.criteria.wheat": "Wheat",
+  "advancements.criteria.minecraft:cat": "Cat",
+  "advancements.criteria.minecraft:fox": "Fox",
+  "advancements.criteria.minecraft:pig": "Pig",
+  "advancements.criteria.minecraft:llama": "Llama",
+  "advancements.criteria.minecraft:turtle": "Turtle",
+  "advancements.criteria.minecraft:sheep": "Sheep",
+  "advancements.criteria.minecraft:mooshroom": "Mooshroom",
+  "advancements.criteria.minecraft:ocelot": "Ocelot",
+  "advancements.criteria.minecraft:cow": "Cow",
+  "advancements.criteria.minecraft:chicken": "Chicken",
+  "advancements.criteria.minecraft:wolf": "Wolf",
+  "advancements.criteria.minecraft:panda": "Panda",
+  "advancements.criteria.minecraft:horse": "Horse",
+  "advancements.criteria.minecraft:rabbit": "Rabbit",
+  "advancements.criteria.textures/entity/cat/all_black.png": "Black",
+  "advancements.criteria.textures/entity/cat/black.png": "Tuxedo",
+  "advancements.criteria.textures/entity/cat/british_shorthair.png": "British Shorthair",
+  "advancements.criteria.textures/entity/cat/calico.png": "Calico",
+  "advancements.criteria.textures/entity/cat/jellie.png": "Jellie",
+  "advancements.criteria.textures/entity/cat/persian.png": "Persian",
+  "advancements.criteria.textures/entity/cat/ragdoll.png": "Ragdoll",
+  "advancements.criteria.textures/entity/cat/red.png": "Red",
+  "advancements.criteria.textures/entity/cat/siamese.png": "Siamese",
+  "advancements.criteria.textures/entity/cat/tabby.png": "Tabby",
+  "advancements.criteria.textures/entity/cat/white.png": "White",
+  "advancements.criteria.cod_bucket": "Cod Bucket",
+  "advancements.criteria.pufferfish_bucket": "Pufferfish Bucket",
+  "advancements.criteria.salmon_bucket": "Salmon Bucket",
+  "advancements.criteria.tropical_fish_bucket": "Tropical Fish Bucket",
+  "advancements.criteria.apple": "Apple",
+  "advancements.criteria.baked_potato": "Baked Potato",
+  "advancements.criteria.beef": "Raw Beef",
+  "advancements.criteria.beetroot": "Beetroot",
+  "advancements.criteria.beetroot_soup": "Beetroot Soup",
+  "advancements.criteria.bread": "Bread",
+  "advancements.criteria.carrot": "Carrot",
+  "advancements.criteria.chicken": "Raw Chicken",
+  "advancements.criteria.chorus_fruit": "Chorus Fruit",
+  "advancements.criteria.cooked_beef": "Steak",
+  "advancements.criteria.cooked_chicken": "Cooked Chicken",
+  "advancements.criteria.cooked_cod": "Cooked Cod",
+  "advancements.criteria.cooked_mutton": "Cooked Mutton",
+  "advancements.criteria.cooked_porkchop": "Cooked Porkchop",
+  "advancements.criteria.cooked_rabbit": "Cooked Rabbit",
+  "advancements.criteria.cooked_salmon": "Cooked Salmon",
+  "advancements.criteria.cookie": "Cookie",
+  "advancements.criteria.dried_kelp": "Dried Kelp",
+  "advancements.criteria.enchanted_golden_apple": "Enchanted Golden Apple",
+  "advancements.criteria.golden_apple": "Golden Apple",
+  "advancements.criteria.golden_carrot": "Golden Carrot",
+  "advancements.criteria.melon_slice": "Melon Slice",
+  "advancements.criteria.mushroom_stew": "Mushroom Stew",
+  "advancements.criteria.mutton": "Raw Mutton",
+  "advancements.criteria.poisonous_potato": "Poisonous Potato",
+  "advancements.criteria.porkchop": "Raw Porkchop",
+  "advancements.criteria.potato": "Potato",
+  "advancements.criteria.pumpkin_pie": "Pumpkin Pie",
+  "advancements.criteria.rabbit": "Raw Rabbit",
+  "advancements.criteria.rabbit_stew": "Rabbit Stew",
+  "advancements.criteria.rotten_flesh": "Rotten Flesh",
+  "advancements.criteria.spider_eye": "Spider Eye",
+  "advancements.criteria.suspicious_stew": "Suspicious Stew",
+  "advancements.criteria.sweet_berries": "Sweet Berries",
+  "advancements.criteria.rock_andesite": "Andesite",
+  "advancements.criteria.rock_basalt": "Basalt",
+  "advancements.criteria.rock_chalk": "Chalk",
+  "advancements.criteria.rock_chert": "Chert",
+  "advancements.criteria.rock_conglomerate": "Conglomerate",
+  "advancements.criteria.rock_dacite": "Dacite",
+  "advancements.criteria.rock_diorite": "Diorite",
+  "advancements.criteria.rock_dolomite": "Dolomite",
+  "advancements.criteria.rock_gabbro": "Gabbro",
+  "advancements.criteria.rock_gneiss": "Gneiss",
+  "advancements.criteria.rock_granite": "Granite",
+  "advancements.criteria.rock_limestone": "Limestone",
+  "advancements.criteria.rock_marble": "Marble",
+  "advancements.criteria.rock_phyllite": "Phyllite",
+  "advancements.criteria.rock_quartzite": "Quartzite",
+  "advancements.criteria.rock_red_sandstone": "Red Sandstone",
+  "advancements.criteria.rock_sandstone": "Sandstone",
+  "advancements.criteria.rock_schist": "Schist",
+  "advancements.criteria.rock_shale": "Shale",
+  "advancements.criteria.rock_slate": "Slate",
+  "evolution.advancements.general.root.title": "Evolution",
   "evolution.advancements.general.root.description": "",
   "evolution.advancements.general.definitely_a_rock.title": "Definitely a rock",
   "evolution.advancements.general.definitely_a_rock.description": "Pick up a rock",
@@ -171,6 +340,7 @@
   "evolution.calendar.month.december": "December",
   "evolution.calendar.connector": "of",
   "COMMENT_TOOLTIPS": "_____________________________________________________________________________________________________________TOOLTIPS",
+  "evolution.tooltip.advancements.remain": "%1$s remaining",
   "evolution.tooltip.clay.mold": " Place while sneaking to mold",
   "evolution.tooltop.container.amount": "%2$s: %1$s",
   "evolution.tooltip.container.capacity": "Capacity: %1$s",
@@ -750,5 +920,10 @@
   "item.evolution.shovel_head_slate": "Slate Shovel Head",
   "item.evolution.spawn_egg_cow": "Cow Spawn Egg",
   "item.evolution.spawn_egg_shadowhound": "Shadowhound Spawn Egg",
-  "item.evolution.torch_unlit": "Unlit Torch"
+  "item.evolution.torch_unlit": "Unlit Torch",
+  "COMMET_EASTER_EGGS": "________________________________________________________________________________________________________EASTER_EGGS",
+  "evolution.easter.chert": "The stars were beautiful, weren't they?",
+  "evolution.easter.gabbro": "Have you ever stared at a cyclone for so long, \nit started to hypnotize you?",
+  "evolution.easter.gneiss": "Sometimes it feels like just yesterday they were\n playing their harmonica around the campfire...",
+  "evolution.easter.slate": "I'm here for the rocket science and the marshmallows."
 }
