Added lunge and some animations.

--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -354,10 +354,12 @@
   "evolution.tooltip.fire_aspect": " ► %1$s Aspecto Flamejante %2$s",
   "evolution.tooltip.heavy_attack": " ► %1$s Ataque Pesado %2$s",
   "evolution.tooltip.knockback": " ► Repulsão %1$s",
+  "evolution.tooltip.lunge": "Estocada",
   "evolution.tooltip.mass": "%1$s Massa",
   "evolution.tooltip.metal.oxidation": " Oxidação: %1$s",
   "evolution.tooltip.mining": "%1$s Velocidade de Mineração",
   "evolution.tooltip.offhand": "Na mão principal ou secundária:",
+  "evolution.tooltip.parry": " ► %1$s Bloqueio",
   "evolution.tooltip.rock.knap": " Coloque enquanto agachado para lascar",
   "evolution.tooltip.rock_type.igneous_extrusive": " Rocha Ígnea Extrusiva",
   "evolution.tooltip.rock_type.igneous_intrusive": " Rocha Ígnea Intrusiva",
