--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -354,10 +354,12 @@
   "evolution.tooltip.fire_aspect": " ► %1$s Fire Aspect %2$s",
   "evolution.tooltip.heavy_attack": " ► %1$s Heavy Attack %2$s",
   "evolution.tooltip.knockback": " ► Knockback %1$s",
+  "evolution.tooltip.lunge": "Lunge",
   "evolution.tooltip.mass": "%1$s Mass",
   "evolution.tooltip.metal.oxidation": " Oxidation: %1$s",
   "evolution.tooltip.mining": "%1$s Mining Speed",
   "evolution.tooltip.offhand": "When in main hand or offhand:",
+  "evolution.tooltip.parry": " ► %1$s Parry",
   "evolution.tooltip.rock.knap": " Place while sneaking to knap",
   "evolution.tooltip.rock_type.igneous_extrusive": " Extrusive Igneous Rock",
   "evolution.tooltip.rock_type.igneous_intrusive": " Intrusive Igneous Rock",
