--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -77,6 +77,8 @@
   "evolution.subtitle.javelin_hit_block": "Javelin hit block",
   "evolution.subtitle.javelin_hit_entity": "Javelin hit entity",
   "evolution.subtitle.javelin_throw": "Javelin thrown",
+  "evolution.subtitle.parry_fail": "Parry failed",
+  "evolution.subtitle.parry_success": "Parry successful",
   "evolution.subtitle.soil_collapse": "Landslide",
   "evolution.subtitle.stone_break": "Stone Breaks",
   "evolution.subtitle.stone_collapse": "Collapsing rocks",
@@ -359,7 +361,7 @@
   "evolution.tooltip.metal.oxidation": " Oxidation: %1$s",
   "evolution.tooltip.mining": "%1$s Mining Speed",
   "evolution.tooltip.offhand": "When in main hand or offhand:",
-  "evolution.tooltip.parry": " ► %1$s Parry",
+  "evolution.tooltip.parry": "Parry",
   "evolution.tooltip.rock.knap": " Place while sneaking to knap",
   "evolution.tooltip.rock_type.igneous_extrusive": " Extrusive Igneous Rock",
   "evolution.tooltip.rock_type.igneous_intrusive": " Intrusive Igneous Rock",
