--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -77,6 +77,8 @@
   "evolution.subtitle.javelin_hit_block": "Javelina acerta bloco",
   "evolution.subtitle.javelin_hit_entity": "Javelina acerta entidade",
   "evolution.subtitle.javelin_throw": "Javelina arremessada",
+  "evolution.subtitle.parry_fail": "Bloqueio falhou",
+  "evolution.subtitle.parry_success": "Bloqueio sucedido",
   "evolution.subtitle.soil_collapse": "Deslizamento de terra",
   "evolution.subtitle.stone_break": "Pedras Quebrando",
   "evolution.subtitle.stone_collapse": "Pedras desmoronando",
@@ -359,7 +361,7 @@
   "evolution.tooltip.metal.oxidation": " Oxidação: %1$s",
   "evolution.tooltip.mining": "%1$s Velocidade de Mineração",
   "evolution.tooltip.offhand": "Na mão principal ou secundária:",
-  "evolution.tooltip.parry": " ► %1$s Bloqueio",
+  "evolution.tooltip.parry": "Bloqueio",
   "evolution.tooltip.rock.knap": " Coloque enquanto agachado para lascar",
   "evolution.tooltip.rock_type.igneous_extrusive": " Rocha Ígnea Extrusiva",
   "evolution.tooltip.rock_type.igneous_intrusive": " Rocha Ígnea Intrusiva",
