Small improvement to the date localization.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -328,6 +328,7 @@
   "evolution.calendar.day.19": "%1$sth",
   "evolution.calendar.day.20": "%1$sth",
   "evolution.calendar.day.21": "%1$sst",
+  "evolution.calendar.full_date": "%2$s %1$s, %3$s",
   "evolution.calendar.month.january": "January",
   "evolution.calendar.month.february": "February",
   "evolution.calendar.month.march": "March",
@@ -340,7 +341,6 @@
   "evolution.calendar.month.october": "October",
   "evolution.calendar.month.november": "November",
   "evolution.calendar.month.december": "December",
-  "evolution.calendar.connector": "of",
   "COMMENT_TOOLTIPS": "_____________________________________________________________________________________________________________TOOLTIPS",
   "evolution.tooltip.advancements.remain": "%1$s remaining",
   "evolution.tooltip.clay.mold": " Place while sneaking to mold",
