--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -328,6 +328,7 @@
   "evolution.calendar.day.19": "%1$s",
   "evolution.calendar.day.20": "%1$s",
   "evolution.calendar.day.21": "%1$s",
+  "evolution.calendar.full_date": "%1$s de %2$s de %3$s",
   "evolution.calendar.month.january": "Janeiro",
   "evolution.calendar.month.february": "Fevereiro",
   "evolution.calendar.month.march": "Março",
@@ -340,7 +341,6 @@
   "evolution.calendar.month.october": "Outubro",
   "evolution.calendar.month.november": "Novembro",
   "evolution.calendar.month.december": "Dezembro",
-  "evolution.calendar.connector": "de",
   "COMMENT_TOOLTIPS": "_____________________________________________________________________________________________________________TOOLTIPS",
   "evolution.tooltip.advancements.remain": "%1$s faltando",
   "evolution.tooltip.clay.mold": " Coloque enquanto agachado para moldar",
