--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -9,6 +9,8 @@
   "itemGroup.evolution.trees_and_wood": "Árvores e Madeira",
   "itemGroup.evolution.liquids": "Líquidos e Recipientes",
   "COMMENT_COMMANDS": "_____________________________________________________________________________________________________________COMMANDS",
+  "command.evolution.date.error": "A data não pode ser definida antes de %1$s às %2$s",
+  "command.evolution.date.success": "A data foi mudada para %1$s",
   "command.evolution.tickrate": "A tickrate do jogo foi mudada para %1$s TPS",
   "COMMENT_KEYS": "_____________________________________________________________________________________________________________________KEYS",
   "key.prone.toggle": "Alternar rastejar",
