Added sounds for sword sheath and draw.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -82,8 +82,10 @@
   "evolution.subtitle.parry_fail": "Parry failed",
   "evolution.subtitle.parry_success": "Parry successful",
   "evolution.subtitle.soil_collapse": "Landslide",
-  "evolution.subtitle.stone_break": "Stone Breaks",
+  "evolution.subtitle.stone_break": "Stone breaks",
   "evolution.subtitle.stone_collapse": "Collapsing rocks",
+  "evolution.subtitle.sword_sheath": "Sheathed sword",
+  "evolution.subtitle.sword_unsheath": "Drawn sword",
   "evolution.subtitle.tree_falling": "Tree falling",
   "evolution.subtitle.wood_collapse": "Wood Collapsing",
   "COMMENT_DEATH_MESSAGES": "_________________________________________________________________________________________________DEATH MESSAGES",
