--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -82,8 +82,10 @@
   "evolution.subtitle.parry_fail": "Bloqueio falhou",
   "evolution.subtitle.parry_success": "Bloqueio sucedido",
   "evolution.subtitle.soil_collapse": "Deslizamento de terra",
-  "evolution.subtitle.stone_break": "Pedras Quebrando",
+  "evolution.subtitle.stone_break": "Pedras quebrando",
   "evolution.subtitle.stone_collapse": "Pedras desmoronando",
+  "evolution.subtitle.sword_sheath": "Espada embainhada",
+  "evolution.subtitle.sword_unsheath": "Espada desembainhada",
   "evolution.subtitle.tree_falling": "Árvore caindo",
   "evolution.subtitle.wood_collapse": "Madeira caindo",
   "COMMENT_DEATH_MESSAGES": "_________________________________________________________________________________________________DEATH MESSAGES",
